[gd_scene load_steps=9 format=3 uid="uid://bjroqyyfrvx70"]

[ext_resource type="PackedScene" uid="uid://bjmn4owp4lhaj" path="res://scenes/component/tween/new_unlock_tween/new_unlock_tween.tscn" id="2_gumta"]
[ext_resource type="AudioStream" uid="uid://cljnal1s4pwpn" path="res://assets/audio/indie_friendly_sound_packs/indie_friendly_rpg_sounds/interface/ui_simple_5_1.wav" id="2_kppmn"]
[ext_resource type="Script" path="res://scenes/ui/progress_button/progress_button.gd" id="2_rp5nm"]
[ext_resource type="PackedScene" uid="uid://b3awft3ugc6q3" path="res://scenes/component/tween/simple_tween/simple_tween.tscn" id="2_v7ecv"]
[ext_resource type="PackedScene" uid="uid://d4a6sfsyw5jie" path="res://scenes/component/effect/line_effect/line_effect.tscn" id="3_aqdv6"]
[ext_resource type="AudioStream" uid="uid://df60q3he8t3i0" path="res://assets/audio/indie_friendly_sound_packs/indie_friendly_rpg_sounds/interface/ui_simple_2_1.wav" id="3_y5gva"]
[ext_resource type="AudioStream" uid="uid://cvolj8504pgrr" path="res://assets/audio/indie_friendly_sound_packs/indie_friendly_rpg_sounds/interface/ui_simple_3_2.wav" id="4_3qpxi"]
[ext_resource type="PackedScene" uid="uid://k6nmnw4kjwjq" path="res://scenes/component/effect/label_effect_queue/label_effect_queue.tscn" id="4_ybk84"]

[node name="ProgressButton" type="MarginContainer"]
anchors_preset = -1
anchor_bottom = 0.001
offset_right = 70.0
offset_bottom = 40.46
size_flags_horizontal = 0
size_flags_vertical = 8
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
script = ExtResource("2_rp5nm")
sfx_button_down = ExtResource("2_kppmn")
sfx_button_success = ExtResource("3_y5gva")
sfx_button_fail = ExtResource("4_3qpxi")

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"ProgressButton"
text = "Button
"

[node name="ProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
mouse_filter = 2
max_value = 1.0
value = 0.5
show_percentage = false

[node name="RedColorRect" type="ColorRect" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 2
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="Tween" type="Node" parent="."]

[node name="ProgressBarSimpleTween" parent="Tween" node_paths=PackedStringArray("target") instance=ExtResource("2_v7ecv")]
unique_name_in_owner = true
target = NodePath("../..")
call_method = "_progress_bar_simple_tween_method"

[node name="RedColorRectSimpleTween" parent="Tween" node_paths=PackedStringArray("target") instance=ExtResource("2_v7ecv")]
unique_name_in_owner = true
target = NodePath("../..")
duration = 0.3
call_method = "_red_color_rect_simple_tween_method"

[node name="NewUnlockTween" parent="Tween" node_paths=PackedStringArray("target") instance=ExtResource("2_gumta")]
unique_name_in_owner = true
target = NodePath("../..")

[node name="Effect" type="Node2D" parent="."]

[node name="LineEffect" parent="Effect" instance=ExtResource("3_aqdv6")]
unique_name_in_owner = true
color = Color(0.282353, 0.282353, 0.282353, 1)
offset_a_x = 1
offset_b_x = -14

[node name="LabelEffectQueue" parent="Effect" instance=ExtResource("4_ybk84")]
unique_name_in_owner = true
